--- a/.env
+++ b/.env
@@ -14,3 +14,10 @@ POSTGRES_PASSWORD=Abhinav
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=planora
+
+
+MAIL_SERVER=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USE_TLS=true
+MAIL_USER=planora.students@gmail.com
+MAIL_PASS=pblo odlf gdof wccn
