--- a/.env
+++ b/.env
@@ -21,3 +21,6 @@ MAIL_PORT=587
 MAIL_USE_TLS=true
 MAIL_USER=planora.students@gmail.com
 MAIL_PASS=pblo odlf gdof wccn
+
+
+GEMINI_API_KEY = "AIzaSyC6iiNiJZ1XUeAF9jtC7rpPRuB3GqYBFGI"
